--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,51 @@
-jalali_core==1.0.0
-jdatetime==5.0.0
+asgiref==3.8.1
+attrs==24.3.0
+audioop-lts==0.2.1
+autobahn==24.4.2
+Automat==24.8.1
+cachetools==5.5.0
+certifi==2024.12.14
+cffi==1.17.1
+channels==4.2.0
+charset-normalizer==3.4.0
+constantly==23.10.4
+cryptography==44.0.0
+daphne==4.1.2
+Django==4.2.16
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+google-api-core==2.24.0
+google-api-python-client==2.156.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
+httplib2==0.22.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+oauthlib==3.2.2
+pillow==11.0.0
+proto-plus==1.25.0
+protobuf==5.29.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+PyJWT==2.10.1
+pyOpenSSL==24.3.0
+pyparsing==3.2.0
+pytz==2024.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+service-identity==24.2.0
+setuptools==75.6.0
+sqlparse==0.5.3
+Twisted==24.11.0
+txaio==23.1.1
+typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
+zope.interface==7.2
